--- a/src/ui/bottom_container/bottom-container.css
+++ b/src/ui/bottom_container/bottom-container.css
@@ -4,6 +4,8 @@
     display: flex;
     flex: 0 1 50px;
     border-top: 1px solid rgb(255, 255, 255);
+    z-index: 2;
+    position: relative;
 }
 
 #life-percent {
