--- a/src/ui/top_container/top-container.css
+++ b/src/ui/top_container/top-container.css
@@ -8,28 +8,25 @@
 }
 
 #total-energy-container {
-    min-width: 120px;
+    min-width: 30%;
     width: fit-content;
-    max-width: 50%;
+    height: 10px;
     margin-left: 6px;
-    margin-top: 10px;
+    margin-top: 13px;
     color: rgb(16, 219, 255);
-    font-weight: lighter;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 #heat-bar-container {
-    width: auto;
-    padding: 10px;
-    max-width: 50%;
-    width: 50%;
+    width: 30%;
     height: 20px;
+    padding: 10px;
 }
 
 #heat-bar-border {
     width: 100%;
     height: 100%;
-    padding: 5px;
+    padding: 2px;
     border: 2px solid rgb(255, 255, 255);
 }
 
@@ -42,8 +39,10 @@
 #heat-level-container {
     display: flex;
     min-width: 120px;
+    width: fit-content;
     margin-right: 6px;
-    margin-top: 10px;
-    color: bisque;
-    float: right;
+    margin-top: 13px;
+    font-size: 20px;
+    justify-content: center;
+    color: rgb(255, 255, 255);
 }
