--- a/src/ui/top_container/top-container.css
+++ b/src/ui/top_container/top-container.css
@@ -8,8 +8,7 @@
 }
 
 #total-energy-container {
-    min-width: 30%;
-    width: fit-content;
+    min-width: fit-content;
     height: 10px;
     margin-left: 6px;
     margin-top: 13px;
@@ -18,31 +17,32 @@
 }
 
 #heat-bar-container {
-    width: 30%;
+    width: 50%;
     height: 20px;
     padding: 10px;
 }
 
 #heat-bar-border {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     padding: 2px;
     border: 2px solid rgb(255, 255, 255);
+    border-radius: 5px;
 }
 
 #heat-bar {
     width: 100%;
     height: 100%;
     background-color: orange;
+    border-radius: 1px;
 }
 
 #heat-level-container {
     display: flex;
-    min-width: 120px;
-    width: fit-content;
-    margin-right: 6px;
+    min-width: fit-content;
+    margin-right: 10px;
     margin-top: 13px;
     font-size: 20px;
-    justify-content: center;
+    justify-content: right;
     color: rgb(255, 255, 255);
 }
