--- a/src/ui/bottom_container/bottom-container.css
+++ b/src/ui/bottom_container/bottom-container.css
@@ -4,8 +4,6 @@
     display: flex;
     flex: 0 1 50px;
     border-top: 1px solid rgb(255, 255, 255);
-    z-index: 2;
-    position: relative;
 }
 
 #life-percent {
@@ -14,7 +12,7 @@
     font-style: italic;
     display: flex;
     justify-content: center;
-    margin-top: 5px;
+    margin-top: 8px;
     margin-right: 2px;
     margin-left: 4px;
 }
@@ -30,9 +28,10 @@
 
 #life-bar-container {
     width: 100%;
+    height: 28px;
     padding: 10px;
-    margin-bottom: 4px;
-    margin-right: 2px;
+    margin-bottom: 8px;
+    margin-right: 4px;
 }
 
 #life-bar-border {
