--- a/src/ui/top_container/top-container.css
+++ b/src/ui/top_container/top-container.css
@@ -8,10 +8,12 @@
 }
 
 #total-energy-container {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
     min-width: fit-content;
     height: 10px;
     margin-left: 6px;
-    margin-top: 13px;
+    margin-top: 10px;
     color: rgb(16, 219, 255);
     font-size: 20px;
 }
@@ -38,10 +40,12 @@
 }
 
 #heat-level-container {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
     display: flex;
     min-width: fit-content;
-    margin-right: 10px;
-    margin-top: 13px;
+    margin-right: 8px;
+    margin-top: 10px;
     font-size: 20px;
     justify-content: right;
     color: rgb(255, 255, 255);
